@@ -1,3 +1,6 @@
+02/10/19
+  -Check status before parsing tag list packets
+
 01/31/19
   -GetTagList gets UDT names so the tag list can contain the name of the data types
   -Added more examples
